[gd_scene load_steps=11 format=3 uid="uid://cv21fkntymgsa"]

[ext_resource type="Script" path="res://Enemies/Boss/boss.gd" id="1_conub"]
[ext_resource type="Script" path="res://Utilites/Health/health.gd" id="2_kue0m"]
[ext_resource type="Shader" uid="uid://bbfxv1jut6xej" path="res://Utilites/hit_flash.tres" id="2_laby7"]
[ext_resource type="Script" path="res://Utilites/Hurtbox.gd" id="3_144de"]
[ext_resource type="PackedScene" uid="uid://pvsuvpa1bj8f" path="res://Utilites/Health/health_bar.tscn" id="4_cpkix"]
[ext_resource type="Script" path="res://Enemies/Boss/boss_state_machine.gd" id="5_to8mi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ukj3d"]
shader = ExtResource("2_laby7")
shader_parameter/Enabled = false
shader_parameter/ColorParameter = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_qdc1e"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_omfg2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/Enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4r682"]
_data = {
"RESET": SubResource("Animation_omfg2"),
"hit": SubResource("Animation_qdc1e")
}

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_conub")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_ukj3d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Health" type="Node2D" parent="."]
script = ExtResource("2_kue0m")
max_health = 200.0

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("parent")]
script = ExtResource("3_144de")
parent = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="health_bar" parent="." instance=ExtResource("4_cpkix")]

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("5_to8mi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4r682")
}

[connection signal="damaged" from="Health" to="." method="_on_health_damaged"]
[connection signal="died" from="Health" to="." method="_on_health_died"]
